# np1sec

./: Makefile.am  configure.ac  jabberite  jabberite-alice.sh  jabberite-bob.sh
contrib/prosody-hg/: config.unix
src/: Makefile.am  common.h  crypt.cc  crypt.h  interface.h  logger.cc  logger.h  message.cc  message.h  participant.cc  participant.h  room.cc  session.cc  session.h  session_id.h  userstate.cc
src/.libs/: libnp1sec.so.0  libnp1sec.so.0.0.0
test/: Makefile.am  chat_mocker.h  chat_mocker_np1sec_plugin.cc  chat_mocker_timered.cc  crypt_test.cc  jabberite.cc  libnp1sec_test  session_test.cc  test_logger.cc  test_message.cc  test_timers.cc  timered_session_test.cc  userstate_test.cc  xmpp_test.cpp
test/.libs/: libnp1sec_test
test/jabberite/: Makefile.am  create_users.sh  ec_api.cc  ec_api.h  eva_at_eff.txt  gdb_jabberite.el  jabberite  jabberite.cc  join_participants.sh  socket_client_test.cc
test/jabberite/.libs/: jabberite  lt-jabberite
